[package]
name = "ffmpeg-dev"
version = "0.3.8"
authors = ["colbyn <hello@colbyn.com>"]
edition = "2018"
keywords = ["video", "ffmpeg"]
description = "Self contained (no net/sys deps) static rust bindings to ffmpeg."
license = "MIT"
homepage = "https://github.com/imager-io/ffmpeg-dev-rs"
repository = "https://github.com/imager-io/ffmpeg-dev-rs"
readme = "README.md"
exclude = ["assets", "examples"]

[features]
default = []
gpl = []
x264 = ["x264-dev"]

[dependencies]
libc = "^0.2"
num_cpus = "1.11.1"
x264-dev = { git = "https://github.com/charliesome/x264-dev", rev = "696b5c13fb14f1b81d6cf2153d60d877a7f03fc6", optional = true }

[build-dependencies]
bindgen = "0.51"
num_cpus = "1.11.1"
cc = "1.0.46"
